Separated output writing from the simulation logic